--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -11,7 +11,7 @@ body {
     background-color: #fff9ea;
 }
 
-.section {
+section {
     padding: 28px 8%;
 }
 
@@ -31,4 +31,28 @@ body {
 
 .btn-default:hover {
     background-color: #f8d477;
+}
+
+.social-media-buttons {
+    display: flex;
+    gap: 18px;
+}
+
+.social-media-buttons a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 45px;
+    height: 40px;
+    background-color: rgba(255, 255, 255, 0.619);
+    font-size: 1.25rem;
+    border-radius: 10px;
+    text-decoration: none;
+    color: #000000;
+    box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
+    transition: box-shadow .3s ease;
+}
+
+.social-media-buttons a:hover {
+    box-shadow: 0px 0px 12px 8px rgba(0, 0, 0, 0.1);
 }
