--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -1,6 +1,7 @@
 #home {
     display: flex;
-    min-height: calc(100vh - 91px);
+    min-height: calc(100vh - 96px);
+    position: relative;
 }
 
 #cta {
@@ -43,4 +44,51 @@
     font-weight: 500;
     box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
     border-radius: 12px;
+
+}
+#phone_button button{
+    box-shadow: none;
+}
+#banner {
+    display: flex;
+    align-items: start;
+    justify-content:end;
+    width: 70%;
+    z-index: 2;
+}
+#banner img{
+    height: 100%;
+    width: fit-content;
+}
+.shape {
+    background-color: #ffe9b4da;
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    border-radius: 40% 30% 0% 20%;
+    top: 0;
+    right: 0;
+    z-index: 1;
+}
+@media screen and (max-width: 1170px) {
+    #home {
+        min-height: 100%;
+        padding-top: 0px;
+    }
+    #banner,
+    #banner img,
+    #home .shape {
+        display: none;
+    }
+    #cta {
+        width: 100%;
+        text-align: center;
+        align-items: center;
+    }
+}
+@media screen and (max-width: 450px) {
+    #phone_button button {
+        display: none;
+
+    }
 }
