--- a/src/CSS/menu.css
+++ b/src/CSS/menu.css
@@ -13,6 +13,7 @@
     gap: 24px;
     margin-top: 32px;
 }
+
 .dish {
     display: flex;
     flex-direction: column;
@@ -21,51 +22,59 @@
     gap: 18px;
     width: 25%;
     padding: 20px;
-    background-color: #ffffff;
-    box-shadow: 0px 0px 12px 4px rgba(0,0,0,0.1);
+    background-color: var(--color-neutral-0);
+    box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
     position: relative;
     overflow: hidden;
 }
+
 .dish-heart {
     position: absolute;
-    background-color: #e9a209;
+    background-color: var(--color-primary-4);
     display: flex;
     align-items: center;
     font-size: 1.563rem;
     justify-content: center;
-    color: #fff9ea;
+    color: var(--color-primary-1);
     width: 70px;
     height: 70px;
     right: -10px;
     top: -10px;
     border-radius: 0px 37.5px 0px 42.5px;
 }
+
 .dish-description {
     color: #434343;
     text-align: center;
 
 }
+
 .dish-rate {
-    color: #e9a209;
+    color: var(--color-primary-4);
 }
+
 .dish-price {
     display: flex;
     align-items: center;
     gap: 20px;
 }
+
 @media screen and (max-width:1170px) {
     #dishes {
         flex-wrap: wrap;
         justify-content: center;
     }
+
     .dish {
         width: calc(50% - 12%)
     }
 }
+
 @media screen and (max-width:600px) {
     .dish {
         width: calc(100% - 12%)
     }
+
     #menu .section-subtitle {
         text-align: center;
     }
