--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -1,4 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('header.css');
+@import url('home.css');
+@import url('menu.css');
+@import url('testimonials.css');
+@import url('footer.css');
+
+:root {
+    --color-primary-1: #fff9ea;
+    --color-primary-2: #ffe8b4;
+    --color-primary-3: #ffe100;
+    --color-primary-4: #e9a209;
+    --color-primary-5: #f8d477;
+    --color-primary-6: #ffcb45;
+
+    --color-neutral-0: #fff;
+    --color-neutral-1: #1d1d1d;
+}
 
 * {
     font-family: 'Poppins', sans-serif;
@@ -8,7 +25,7 @@
 }
 
 body {
-    background-color: #eee3c7;
+    background-color: var(--color-primary-1);
 }
 
 section {
@@ -20,7 +37,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #ffcb45;
+    background-color: var(--color-primary-6);
     border-radius: 12px;
     padding: 10px 14px;
     font-weight: 600;
@@ -30,7 +47,7 @@ section {
 }
 
 .btn-default:hover {
-    background-color: #f8d477;
+    background-color: var(--color-primary-5);
 }
 
 .social-media-buttons {
@@ -56,10 +73,12 @@ section {
 .social-media-buttons a:hover {
     box-shadow: 0px 0px 12px 8px rgba(0, 0, 0, 0.1);
 }
+
 .section-title {
     color: #e9a209;
     font-size: 1.563rem;
 }
+
 .section-subtitle {
     font-size: 2.1875rem;
 }
