solving bug-buttons

--- a/src/CSS/testimonials.css
+++ b/src/CSS/testimonials.css
@@ -89,5 +89,8 @@
 
     #testimonianls_content {
         width: 100%;
+        flex-wrap: wrap;
+        justify-content: center;
+      
     }
 }
