--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -27,8 +27,9 @@
 
 #cta_buttons {
     display: flex;
-    gap: 24px;
-}
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 
 #cta_buttons a {
     text-decoration: none;
