solving responsiving problems

--- a/src/CSS/footer.css
+++ b/src/CSS/footer.css
@@ -1,10 +1,15 @@
 footer {
     background-color: var(--color-primary-1);
+    width: 100%;
 }
+
 #footer-items {
     display: flex;
-    justify-content: space-around;
-    padding: 0px 8px 24px 8px;
+    flex-direction: column;
+    gap: 20px;
+    margin: auto;
+    width: 400px;
+    margin-bottom: 30px;
     align-items: center;
 }
 
@@ -12,10 +17,12 @@ footer {
     color: var(--color-neutral-1);
     font-weight: 500;
 }
+
 @media screen and (max-width: 600px) {
     #footer-items {
-       flex-direction: column;
-       gap: 20px; 
+        flex-direction: column;
+        gap: 20px;
+        width: auto;
     }
 
 }
